# v2g2

./: .gitignore  README.md  pyproject.toml
src/gateway/: auth.py  config.py  main.py  models.py  vertex.py
src/gateway/routes/: cache.py  generate.py  models.py  stream.py
systemd/: gemini-gateway.service
test-20260617/: check_errors.sh  run_tests.sh
tests/: cache_smoke.sh  list_models.sh  test_cache.py  test_generate.py  test_models.py  test_stream.py  test_vertex.py
tests/fixtures/: cache_dummy.txt
